--- a/style.css
+++ b/style.css
@@ -40,21 +40,73 @@ border-radius: 50%;
     width: 60px;
     height: 60px;
     background: red;
+    transform:2s;
 }
-
+.ex-5-square:hover{
+    transform: scale(5);
+}
+.ex-5-square:active{
+    transform: scale(0.3)
+}
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
 
+.ex-6-img:hover{
+    filter: grayscale(3);
+}
+.ex-7-img{
+    transform: 2s; 2s;
+}
+.ex-7-img:hover{
+    filter: sepia(5) grayscale(3);     
+}
+.ex-8-img{
+    transform: 5s;
+}
+.ex-8-img:hover{
+    border-radius:  50%;
+    filter: contrast(0.5);
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    transform: 2s;
+}
+.ex-9-img:hover{
+    border-radius: 20px;
+    width: 50%;
 }
 .ex-10-icon {
     font-size: 60px;
+    animation: caricamento 0.5s linear infinite;
 }
+
+@keyframes caricamento {
+ 0%{
+     transform: rotate(2turn);
+ }
+}
+
 .ex-11-icon {
     font-size: 60px;
+    animation: spin 2s linear;
+}
+@keyframes spin {
+    0%{
+        transform: rotate(0);
+    }
+    80%{
+        transform: rotate(315deg);
+    }
+    100%{
+        transform: rotate(0);
+    }
 }
 .ex-12-button, .ex-13-button {
     position: relative;
